--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,10 @@
   "name": "nytreact",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.4.1",
+    "node": "10.0.0"
+  },
   "proxy": "http://localhost:5000/",
   "dependencies": {
     "axios": "^0.18.0",
