--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": {
+    "node": "10.0.0",
+    "npm": "6.4.1"
+  },
   "scripts": {
     "start": "node server.js",
     "build": "react-scripts build",
